--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^5.3.7",
     "firebase": "^12.4.0",
     "lottie-react": "^2.4.1",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.4",
