--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
+    "swiper": "^12.0.2",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
