--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
     "daisyui": "^5.3.7",
     "firebase": "^12.4.0",
     "lottie-react": "^2.4.1",
@@ -21,6 +22,7 @@
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
     "react-simple-typewriter": "^5.0.1",
+    "sweetalert2": "^11.26.3",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.14"
   },
